@@ -5,10 +5,10 @@ this repository contains the full copyright notices and license terms. -->
     <data group="1">
         <record model="ir.message" id="msg_product_change_cost_price">
             <field name="text">You cannot change the cost price of a product which is associated to stock moves.
-You must use the "Update Cost Price" wizard.</field>
+You must use the "Modify Cost Price" wizard.</field>
         </record>
-        <record model="ir.message" id="msg_update_cost_price_same_account">
-            <field name="text">To update cost price, you must change the counterpart account "%(account)s".</field>
+        <record model="ir.message" id="msg_modify_cost_price_same_account">
+            <field name="text">To modify the cost price, you must change the counterpart account "%(account)s".</field>
         </record>
     </data>
 </tryton>
