@@ -1,3 +1,5 @@
+* Replace 'Update Cost Price' by 'Modify Cost Price'
+
 Version 5.2.0 - 2019-05-06
 * Bug fixes (see mercurial logs for details)
 * Enforce balance and income statement on stock accounts
